fix: navbar gap on mobile

--- a/client/public/css/template.css
+++ b/client/public/css/template.css
@@ -13,7 +13,7 @@ nav {
     position: -webkit-sticky;
     top: 0px;
     margin: -10px;
-    width: 100%;
+    width: calc(100% + 20px);
     z-index: 10;
 }
 
